# Cpp-Hospital-Microservices

./: .gitignore  README.md
cpp-backend/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml  nginx.conf
cpp-backend/src/: appointment_service.cpp  billing_service.cpp  doctor_service.cpp  patient_service.cpp
scripts/: seed_data.sql  stress_test.py
